chore (styles): fixed z-index for navigation

--- a/styles/base.css
+++ b/styles/base.css
@@ -151,6 +151,7 @@ footer {
 }
 header {
   background: var(--muted);
+  z-index: 10;
 }
 
 a,
